Migrated to Supabase postgreesql

--- a/SmartRouteAPI_Service/appsettings.json
+++ b/SmartRouteAPI_Service/appsettings.json
@@ -1,5 +1,5 @@
 {
-  //API ARE NOT EXPOSED LOCALLY, THEY ARE SET UP IN THE AZURE
+  //API ARE NOT EXPOSED LOCALLY, THEY ARE SET UP IN THE AZURE OR RENDER.COM
   //WILL PROVIDE ON REQUEST
   "Logging": {
     "LogLevel": {
